# VASPilot

./: .env.example  .gitignore  Dockerfile  README.md  README_zh.md  docker-compose.yml  pyproject.toml
configs/: crew_config.yaml  mcp_config.yaml
examples/1.Basic/configs/: crew_config.yaml  crew_config_en.yaml  mcp_config.yaml
examples/1.Basic/crew_server/: start_crew_server.sh
examples/2.Basic+RAG/configs/: crew_config.yaml  crew_config_en.yaml
examples/2.Basic+RAG/crew_server/: start_crew_server.sh
examples/2.Basic+RAG/knowledge/VASP_wiki/: LISCENSE
examples/2.Basic+RAG/mcp/: start_mcp_server.sh
examples/2.Basic+RAG/mcp/attachment/: slurm.sh  vdw_kernel.bindat
knowledge/VASP_wiki/: README.md  how_to.json  incar_tags.json
src/vaspilot/crew/: __init__.py  embedding.py  local_llm.py  vasp_crew.py
src/vaspilot/listener/: log_listener.py  server_listener.py
src/vaspilot/scripts/: __init__.py  start_flask.py  start_mcp.py  start_quart.py  start_server.py
src/vaspilot/server/flask_server/: __init__.py  flask_server.py
src/vaspilot/server/flask_server/templates/: base.html  task_detail.html
src/vaspilot/server/quart_server/: quart_server.py
src/vaspilot/server/quart_server/templates/: base.html  task_detail.html
src/vaspilot/tools/: __init__.py  json_rag_tool.py  wait_calc_tool.py
src/vaspilot/tools/mcp/: mcp_server.py  python_plot.py  sqlite_database.py  struct_tools.py  vasp_calculate.py
test/test_crew/: calculate_report.md  output.log.txt  test_crew.py
test/test_crew/memory/etm/: chroma.sqlite3
test/test_crew/memory/stm/: chroma.sqlite3
test/test_flask/: crew_tasks.db  run_flask_server.py  start_server.sh
test/test_flask/work/726473f3-4621-4182-b940-11e343c823bf/: crew_output_613ce976.md  output.log.txt
test/test_flask/work/726473f3-4621-4182-b940-11e343c823bf/memory/etm/: chroma.sqlite3
test/test_flask/work/726473f3-4621-4182-b940-11e343c823bf/memory/stm/: chroma.sqlite3
test/test_flask/work/bc48b5ca-a93d-437a-95d8-59426d1ea419/: crew_output_10ecc4a1.md  output.log.txt
test/test_flask/work/bc48b5ca-a93d-437a-95d8-59426d1ea419/memory/etm/: chroma.sqlite3
test/test_flask/work/bc48b5ca-a93d-437a-95d8-59426d1ea419/memory/stm/: chroma.sqlite3
