[project]
name = "vaspilot"
version = "0.2.0"
description = "VASP automation and analysis using CrewAI framework with MCP support"
authors = [{ name = "Jiaxuan Liu", email = "liujiaxuan23@mails.ucas.ac.cn" }, { name = "Quansheng Wu", email = "quansheng.wu@iphy.ac.cn" }]
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.150.0,<1.0.0",
    "crewai-tools[mcp]>=0.12.0",
    
    "fastmcp>=2.10.6",
    "mcp>=1.11.0",
    
    "pymatgen>=2025.0.0",
    "ase>=3.22.0",
    "mp-api>=0.45.0",
    
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    
    "pydantic>=2.4.0,<3.0.0",
    "PyYAML>=6.0",
    "requests>=2.28.0",
    
    "chromadb>=0.4.0",
    "markdown>=3.4.0",
    "python-multipart>=0.0.6",
    
    "Flask>=2.3.0",
    "gunicorn>=21.0.0",
    "Jinja2>=3.1.0",
    "werkzeug>=2.3.0"
]

[project.scripts]
vaspilot_server = "vaspilot.scripts:start_crew"
vaspilot_mcp = "vaspilot.scripts:start_mcp"

[project.urls]
Homepage = "https://github.com/JiaxuanLiu-Arsko/VASPilot"
Repository = "https://github.com/JiaxuanLiu-Arsko/VASPilot"
Documentation = "https://github.com/JiaxuanLiu-Arsko/VASPilot#readme"

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vaspilot"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "pyproject.toml"
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pymatgen.*",
    "ase.*",
    "mp_api.*",
    "crewai.*",
    "chromadb.*",
    "fastmcp.*",
    "mcp.*"
]
ignore_missing_imports = true